--- a/_musinsa_teamProject/build.gradle
+++ b/_musinsa_teamProject/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
