--- a/_musinsa_teamProject/bin/main/application.properties
+++ b/_musinsa_teamProject/bin/main/application.properties
@@ -4,3 +4,12 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username= tester
 spring.datasource.password= tester
 spring.datasource.url=jdbc:mariadb://172.30.1.95:3307/testdb
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+#show sql
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#ddl auto
+spring.jpa.hibernate.ddl-auto=update
